k8s/argocd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-service
  namespace: argocd
spec:
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
